--- a/spec/vcr_cassettes/site_assets.yml
+++ b/spec/vcr_cassettes/site_assets.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://:@api.siteleaf.com/v1/sites//assets
+    uri: https://KEY:SECRET@api.siteleaf.com/v1/sites/SITE_ID/assets
     body:
       encoding: US-ASCII
       string: ''
@@ -33,7 +33,7 @@ http_interactions:
       - keep-alive
     body:
       encoding: UTF-8
-      string: "[]"
+      string: '[{"id":"","filename":"","url":"","permalink":"","file":{"url":"","thumbnail":{"url":null}},"content_type":"","filesize":0,"checksum":"","created_at":"","updated_at":"","meta":[{"id":"","key":"","value":""}]},{"id":"","filename":"","url":"","permalink":"","file":{"url":"","thumbnail":{"url":null}},"content_type":"","filesize":0,"checksum":"","created_at":"","updated_at":"","meta":[{"id":"","key":"","value":""}]}]'
     http_version:
   recorded_at: Wed, 01 Jul 2015 15:12:35 GMT
 recorded_with: VCR 2.9.3
