--- a/spec/vcr_cassettes/theme_assets.yml
+++ b/spec/vcr_cassettes/theme_assets.yml
@@ -33,7 +33,7 @@ http_interactions:
       - keep-alive
     body:
       encoding: UTF-8
-      string: '[{"id":"","filename":"","url":"","permalink":"","file":{"url":"","thumbnail":{"url":null}},"content_type":"","filesize":0,"checksum":"","created_at":"","updated_at":"","meta":[{"id":"","key":"","value":""}]},{"id":"","filename":"","url":"","permalink":"","file":{"url":"","thumbnail":{"url":null}},"content_type":"","filesize":0,"checksum":"","created_at":"","updated_at":"","meta":[{"id":"","key":"","value":""}]}]'
+      string: '[{"id":"","filename":"","url":"","permalink":"","file":{"url":"","thumbnail":{"url":null}},"content_type":"","filesize":0,"checksum":"","created_at":"","updated_at":"","meta":[{"id":"","key":"","value":""}]}]'
     http_version:
   recorded_at: Tue, 14 Jul 2015 19:57:05 GMT
 recorded_with: VCR 2.9.3
